# mrfsim_research

./: .gitignore  MRMNote2022_config.json  README.md  TODO.md  Transformers.py  TwixObject.py  batch_phantoms.yml  batch_phantoms1.yml  batch_test.yml  config-results.yml  config_train_voxelmorph_shell.json  dictoptimizers.py  experiments.sh  experiments_CS.sh  generate_test_data.py  image_series.py  install.sh  movements.py  mrf144_SeqFF_PWCR_config.json  mrf_dict_config.json  mrf_dictconf.json  mrf_dictconf_CS.json  mrf_dictconf_Dico2_Invivo_lightDFB1.json  mrf_dictconf_Dico2_Invivo_lightT1.json  mrf_dictconf_Dico2_Invivo_light_for_matching_neg_fat_shift.json  mrf_dictconf_Dico2_Invivo_light_for_matching_new_fat_model.json  mrf_dictconf_Dico2_Invivo_light_for_matching_overshoot.json  mrf_dictconf_Dico2_Invivo_light_for_matching_overshoot_B1df.json  mrf_dictconf_Dico2_Invivo_light_for_matching_overshoot_df.json  mrf_dictconf_Dico2_Invivo_neg_fat_shift.json  mrf_dictconf_Dico2_Invivo_new_fat_model.json  mrf_dictconf_Dico2_Invivo_overshoot.json  mrf_dictconf_Dico2_Invivo_overshoot_B1df.json  mrf_dictconf_Dico2_Invivo_overshoot_df.json  mrf_dictconf_SimReco2.json  mrf_dictconf_SimReco2_light.json  mrf_dictconf_SimReco2_lightDFB1.json  mrf_dictconf_SimReco2_light_df0.json  mrf_dictconf_SimReco2_light_extended_T1.json  mrf_dictconf_SimReco2_light_matching.json  (+125 more)
Notebook/: displacement_test.ipynb
data/: paramMap.mat
hosvd.egg-info/: PKG-INFO
mrf_params/: B1_fingerprint.mat  TE_fingerprint.mat  TR_fingerprint.mat
mrf_sim.egg-info/: PKG-INFO
mrfsim/: Transformers.py  __init__.py  admm_hd_prost_multibins.py  admm_hd_prost_mutibins_v2.py  dictoptimizers.py  image_series.py  movements.py  reco_prost_gpu_v3.py  trajectory.py  utils_mrf.py  utils_reco.py  utils_simu.py
mrfsim.egg-info/: PKG-INFO
mrftools.egg-info/: PKG-INFO
notebooks/: Autofocus and navigator best channel selection.ipynb  Check Dico Search Matlab vs Python.ipynb  Dictionary matching comparisons.ipynb  Group Matching Bi Comp.ipynb  Keras Toy Model.ipynb  Navigator Multitasking.ipynb  Navigator Registration.ipynb  Test GLLM.ipynb  (+1 more)
(+84 files in other folders)
