[metadata]
name = mrfsim
description = MRF tools ...
version = 0.1.dev1

[options]
python_requires = >=3.7
install_requires = \
    numpy
    dask
    scipy
    scikit-learn
    pillow
    simpleitk
    finufft
    tqdm
    matplotlib
    requests
    opencv-python
    pandas
    pywavelets
    statsmodels
    scikit-image
    tf-keras
    voxelmorph
    # twixtools @ git+https://github.com/pehses/twixtools.git
    twixtools @ git+https://github.com/StanRenko/twixtools.git
    epgpy @ git+https://github.com/py-baudin/epgpy.git
    dicomstack @ git+https://github.com/py-baudin/dicomstack.git
    machines @ git+https://github.com/py-baudin/machines.git
packages = mrfsim

[options.extras_require]
cupy = cupy
# test = pytest