[metadata]
name = mrfsim
description = MRF tools for 2D and 3D MRF simulations and reconstructions (including motion correction, dictionary generation, parameter mapping) for free-breathing and whole-body applications
version = 0.1.dev1

[options]
python_requires = >=3.7
install_requires = \
    #numpy==1.21.0
    numpy
    dask
    scipy
    scikit-learn
    pillow
    simpleitk
    finufft
    tqdm
    matplotlib
    requests
    opencv-python
    pandas
    pywavelets
    statsmodels
    scikit-image
    tf-keras
    tensorflow==2.5.0
    voxelmorph
    wandb
    # twixtools @ git+https://github.com/pehses/twixtools.git
    twixtools @ git+https://github.com/StanRenko/twixtools.git
    epgpy @ git+https://github.com/py-baudin/epgpy.git
    dicomstack @ git+https://github.com/py-baudin/dicomstack.git
    machines @ git+https://github.com/py-baudin/machines.git
    # neurite@ git+https://github.com/adalca/neurite.git@dev-tensorflow
    # voxelmorph @ git+https://github.com/voxelmorph/voxelmorph.git@dev-tensorflow

packages = mrfsim

[options.extras_require]
cupy = cupy
# Cannot install via pip; use conda for this : conda install -c conda-forge cupy=8.3.0 numpy=1.21.0
# test = pytest